# restaurant_backend

./: .env_sample  .gitignore  main.py  manage.py  pyproject.toml  runserver.py
apps/api_logs/: apps.py  middleware.py  models.py  serializers.py  urls.py  views.py
apps/api_logs/migrations/: 0001_initial.py
apps/authentication/: managers.py  patterns.py  urls.py  utils.py
apps/authentication/filters/: user.py
apps/authentication/migrations/: 0001_initial.py
apps/authentication/models/: __init__.py  perms.py  user_profile.py  users.py
apps/authentication/permissions/: permissions.py
apps/authentication/serializers/: __init__.py  change_password.py  contact_us.py  forget_password_otp.py  login.py  permissions.py  signup.py  users.py
apps/authentication/views/: __init__.py  contact.py  forget_password.py  permissions.py  users.py
apps/core/: admin.py  apps.py  urls.py
apps/core/migrations/: 0001_initial.py  0002_alter_menuitem_photo.py  0003_alter_menuitem_photo.py  0004_rename_kitchen_category_kitchen_category_and_more.py  0005_remove_orderitem_unit_price_remove_orders_ordered_at_and_more.py  0006_alter_orders_customer.py
apps/core/models/: __init__.py  (+4 more)
apps/customer/: models.py
apps/location/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
base/: exceptions.py  models.py  serializers.py  utils.py
base/validators/: photos.py
base/views/: __init__.py  generic_views.py  views.py
restaurant_backend/: asgi.py  db.py  patterns.py  rest.py  settings.py  settings_config.py  simple_jwt.py  spectacular.py  urls.py  wsgi.py
(+33 files in other folders)
